@@ -108,25 +108,9 @@ signing {
     sign publishing.publications.framework
 }
 
-javadoc {
-    failOnError false
-    options.addBooleanOption('html5', true)
-    options.addStringOption('encoding', 'UTF-8')
-    options.addStringOption('charSet', 'UTF-8')
-    //options.addBooleanOption('-enable-preview', true)
-    //options.addStringOption('-release', '20')
-    options.addBooleanOption('-ignore-source-errors', true)
-    options.addStringOption('Xdoclint:none', '-quiet')
-}
-
 java {
     withJavadocJar()
     withSourcesJar()
-}
-
-compileJava {
-    sourceCompatibility = JavaVersion.VERSION_20
-    targetCompatibility = JavaVersion.VERSION_20
 }
 
 // Task for JavaPoet generation of EVER-SDK API
@@ -137,14 +121,9 @@ task generateEverscaleContracts(type: JavaExec) {
     mainClass = "tech.deplant.java4ever.frtest.codegen.ContractGenerator"
 }
 
-test {
-    useJUnitPlatform()
-    jvmArgs += "--enable-preview"
-    jvmArgs += "--add-modules=jdk.incubator.concurrent"
-    jvmArgs += "--enable-native-access=java4ever.binding"
-}
-
 tasks.withType(JavaCompile).configureEach {
+    sourceCompatibility = JavaVersion.VERSION_20
+    targetCompatibility = JavaVersion.VERSION_20
     javaCompiler = javaToolchains.compilerFor {
         languageVersion = JavaLanguageVersion.of(20)
     }
@@ -160,10 +139,26 @@ tasks.withType(JavaExec).configureEach {
     jvmArgs += "--add-modules=jdk.incubator.concurrent"
 }
 
+tasks.withType(Javadoc).configureEach {
+    javadocTool = javaToolchains.javadocToolFor {
+        languageVersion = JavaLanguageVersion.of(20)
+    }
+    failOnError false
+    options.addBooleanOption('html5', true)
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet', 'UTF-8')
+    options.addBooleanOption('-enable-preview', true)
+    options.addStringOption('-release', '20')
+    options.addBooleanOption('-ignore-source-errors', true)
+    options.addStringOption('Xdoclint:none', '-quiet')
+}
+
 tasks.withType(Test) {
     javaLauncher = javaToolchains.launcherFor {
         languageVersion = JavaLanguageVersion.of(20)
     }
+    useJUnitPlatform()
     jvmArgs += "--enable-preview"
     jvmArgs += "--add-modules=jdk.incubator.concurrent"
+    jvmArgs += "--enable-native-access=java4ever.binding"
 }
